# vote-pray-love

./: Cargo.toml  README.md  build-run.sh
.github/workflows/: check.yml
docs/: substrate-setup.md
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  command.rs  command_helper.rs  rpc.rs  service.rs
pallets/slashing-voting/: Cargo.toml  README.md
pallets/slashing-voting/src/: lib.rs  mock.rs  tests.rs  types.rs
pallets/template/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
